# status-scripts

./: .gitignore  Cargo.toml  Makefile  README.md  utils.c  utils.h
.github/workflows/: dependabot-auto-approve.yml
components/: battery.c  cpu.c  disk.c  eth.c  mullvad-check.c  ram.c  wifi.c
src/: arch-updates.rs  battery-notifier.rs  battery.rs  cpu.rs  disk.rs  eth.rs  mullvad.rs  proton.rs  ram.rs  structured.rs  utils.rs  wifi.rs
src/structured/: mullvad.rs  proton.rs
