[package]
name = "status-scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.26.2"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0.154", features = ["derive"] }

[profile.release]
# opt-level = 'z'
codegen-units = 1
strip = true

[[bin]]
name = "disk-status"
path = "src/disk.rs"

[[bin]]
name = "wifi-status"
path = "src/wifi.rs"

[[bin]]
name = "ram-status"
path = "src/ram.rs"

[[bin]]
name = "cpu-status"
path = "src/cpu.rs"

[[bin]]
name = "eth-status"
path = "src/eth.rs"

[[bin]]
name = "mullvad-status"
path = "src/mullvad.rs"

[[bin]]
name = "battery-status"
path = "src/battery.rs"
