[package]
name = "status-scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
nix = { version = "0.28.0", features = ["fs"] }
notify-rust = "4.8.0"
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.104"
whoami = "1.4.1"

[profile.release]
codegen-units = 1
strip = true

[[bin]]
name = "disk-status"
path = "src/disk.rs"

[[bin]]
name = "wifi-status"
path = "src/wifi.rs"

[[bin]]
name = "ram-status"
path = "src/ram.rs"

[[bin]]
name = "cpu-status"
path = "src/cpu.rs"

[[bin]]
name = "eth-status"
path = "src/eth.rs"

[[bin]]
name = "mullvad-status"
path = "src/mullvad.rs"

[[bin]]
name = "battery-status"
path = "src/battery.rs"

[[bin]]
name = "battery-notifier"
path = "src/battery-notifier.rs"

[[bin]]
name = "proton-status"
path = "src/proton.rs"

[[bin]]
name = "arch-updates-status"
path = "src/arch-updates.rs"
